--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,9 @@
       <div class="row" id="mars-featured-image">
         <div class="col-md-8">
           <h2>Featured Mars Image</h2>
+          <!-- if images is False/None/non-existent, then default to error message -->
           <img
-            src="{{mars.featured_image }}"
+            src="{{mars.featured_image | default('static/images/error.png', true) }}"
             class="img-responsive"
             alt="Responsive image"
           />
@@ -48,6 +49,25 @@
           </div>
         </div>
       </div>
+  --copied from https://raw.githubusercontent.com/RachelRautenberg/Mission_to_Mars/main/templates/index.html
+    <!-- Section for hemisphere images and titles -->
+      <div class="row" id="hemispheres">
+        <div class="col-md-12">
+          <h2 class="text-center">Hemispheres of Mars</h2>
+        </div>
+      </div>
+      {% for hemisphere in mars.hemispheres %}
+        <div class="col-md-6">
+          <div class="thumbnail">
+            <img src="{{hemisphere.image | default('static/images/error.png', true)}}" 
+               class="img-thumbnail"
+              alt="img-responsive">
+            <div class="caption">
+              <h3>{{hemisphere.title}}</h3>
+           </div>
+          </div>
+        </div>
+      {% endfor %}
     </div>
   </body>
 </html>
