--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,8 @@
       <div class="jumbotron text-center">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <!-- Used for some logic https://getbootstrap.com/docs/3.4/css/#buttons -->
+        <p><a class="btn btn-danger btn-sm" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
@@ -50,9 +51,10 @@
         </div>
       </div>
   <!-- Copied some of the code for hemisphere html https://github.com/RachelRautenberg/Mission_to_Mars/blob/main/index.html -->
+  <!-- Used for to get some logic https://getbootstrap.com/docs/3.3/examples/grid/ -->
     <!-- Section for hemisphere images and titles -->
       <div class="row" id="hemispheres">
-        <div class="col-md-12">
+        <div class="page-header">
           <h2 class="text-center">Hemispheres of Mars</h2>
         </div>
       </div>
@@ -60,8 +62,7 @@
         <div class="col-md-6">
           <div class="thumbnail">
             <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" 
-               class="img-thumbnail"
-              alt="img-responsive">
+            alt="img-responsive">
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
            </div>
